--- a/server/django/sensordata/templates/license.html
+++ b/server/django/sensordata/templates/license.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'base_license.html' %}
 
-{% block title %}License Information{% endblock %}
+{% block title %}Project Information and Licenses{% endblock %}
 
 {% block content %}
 <div class="content">
@@ -12,7 +12,7 @@
                     <h5 class="mb-0">
                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
                             aria-expanded="true" aria-controls="collapseOne">
-                            1. The FlowNexus Project
+                            1. The "flownexus" Project
                         </button>
                     </h5>
                 </div>
