--- a/server/django/sensordata/templates/registration/login.html
+++ b/server/django/sensordata/templates/registration/login.html
@@ -1,8 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_login.html' %}
+{% load static %}
 
 {% block content %}
 <div class="login-container">
     <div class="login-form">
+        <img src="{% static 'img/flownexus_logo_dark.svg' %}" alt="Flow Nexus Logo" class="login-logo">
         <h1>Login</h1>
         <form method="post">
             {% csrf_token %}
