--- a/server/django/sensordata/templates/base.html
+++ b/server/django/sensordata/templates/base.html
@@ -87,7 +87,7 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="https://jonas-rem.github.io/lwm2m_server/" class="nav-link">Documentation</a>
+                    <a href="https://jonas-rem.github.io/flownexus/" class="nav-link">Documentation</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -97,7 +97,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
                         <a class="dropdown-item" href="{% url 'license_dashboard' %}">Overview</a>
-                        <a class="dropdown-item" href="mailto:jremmertgmx@googlemail.com,ov@tech22.de,akarshankap@gmail.com">Contact</a>
+                        <a class="dropdown-item" href="https://github.com/jonas-rem/flownexus">Contact</a>
                     </div>
                 </li>
             </ul>
