--- a/server/django/sensordata/templates/base_license.html
+++ b/server/django/sensordata/templates/base_license.html
@@ -88,7 +88,7 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="https://jonas-rem.github.io/lwm2m_server/" class="nav-link">Documentation</a>
+                    <a href="https://jonas-rem.github.io/flownexus/" class="nav-link">Documentation</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -99,7 +99,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
                         <a class="dropdown-item" href="{% url 'license_dashboard' %}">Licenses</a>
                         <a class="dropdown-item"
-                            href="mailto:jremmertgmx@googlemail.com,ov@tech22.de,akarshankap@gmail.com">Contact</a>
+                            href="https://github.com/jonas-rem/flownexus">Contact</a>
                     </div>
                 </li>
             </ul>
@@ -154,8 +154,8 @@
             </section>
         </div>
         <footer class="main-footer">
-            <strong>Made with ❤️ by <a href="https://github.com/jonas-rem/lwm2m_server">JoKar</a></strong>
-            Copyright &copy; 2024, OliVölck, JoRem & A-Karshan.
+            <strong>Made with ❤️ by <a href="https://github.com/jonas-rem/flownexus">Vol-JoKar</a></strong>
+            Copyright &copy; 2024, Individual flownexus contributors.
             <div class="float-right d-none d-sm-inline-block">
                 <b>Version</b> 1.0.0-alpha
             </div>
