--- a/server/django/sensordata/templates/license.html
+++ b/server/django/sensordata/templates/license.html
@@ -20,7 +20,7 @@
                     <div class="card-body">
                         <p>This update pertains to the ongoing development of the Pump Monitor project, introduced at
                             the Zephyr Summit 2023.
-                            Deutsche Bahn emphasizes the use of Open Source software to ensure supply chain resilience
+                            We use of Open Source software to ensure supply chain resilience
                             in software components. This
                             approach reduces reliance on specific cloud providers, minimizing risks associated with
                             potential service disruptions.</p>
