--- a/server/django/sensordata/templates/base.html
+++ b/server/django/sensordata/templates/base.html
@@ -35,17 +35,15 @@
                                 </p>
                             </a>
                         </li>
-
                         <li class="nav-item">
-                            <a href="{% url 'firmware_dashboard' %}"
-                                class="nav-link {% if request.path == '/firmware_dashboard/' %}active{% endif %}">
+                            <a href="{% url 'device_dashboard' %}"
+                                class="nav-link {% if request.path == '/device_dashboard/' %}active{% endif %}">
                                 <i class="nav-icon fas fa-microchip"></i>
                                 <p>
-                                    Firmware Update
+                                    Device Dashboard
                                 </p>
                             </a>
                         </li>
-
                         <li class="nav-item">
                             <a href="{% url 'event_dashboard' %}"
                                 class="nav-link {% if request.path == '/event_dashboard/' %}active{% endif %}">
@@ -55,23 +53,12 @@
                                 </p>
                             </a>
                         </li>
-
                         <li class="nav-item">
-                            <a href="{% url 'graph_dashboard' %}"
-                                class="nav-link {% if request.path == '/graph_dashboard/' %}active{% endif %}">
-                                <i class="nav-icon fas fa-chart-pie"></i>
+                            <a href="{% url 'firmware_dashboard' %}"
+                                class="nav-link {% if request.path == '/firmware_dashboard/' %}active{% endif %}">
+                                <i class="nav-icon fas fa-microchip"></i>
                                 <p>
-                                    Graph Dashboard
-                                </p>
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a href="{% url 'pending_communication_dashboard' %}"
-                                class="nav-link {% if request.path == '/pending_communication_dashboard/' %}active{% endif %}">
-                                <i class="nav-icon fas fa-envelope"></i>
-                                <p>
-                                    Communications
+                                    Firmware Update
                                 </p>
                             </a>
                         </li>
@@ -158,6 +145,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css">
+    {% block extra_js %}{% endblock %}
 </body>
 
 </html>
