--- a/server/django/sensordata/templates/device_dashboard.html
+++ b/server/django/sensordata/templates/device_dashboard.html
@@ -67,7 +67,7 @@
                     <th>Battery Voltage</th>
                     <td>
                         {% if selected_endpoint.battery_voltage %}
-                        {{ selected_endpoint.battery_voltage }} V
+                        {{ selected_endpoint.battery_voltage }} %
                         {% else %}
                         N/A
                         {% endif %}
@@ -87,6 +87,20 @@
                     <option value="{{ resource_type.id }}" {% if selected_resource_type and selected_resource_type.id == resource_type.id %}selected{% endif %}>
                         {{ resource_type.name }} ({{ resource_type.data_type }})
                     </option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-6">
+            <div class="form-group">
+                <label for="event_type">Select Event for Visualization:</label>
+                <select class="form-control" id="event_type" name="event_type">
+                    <option value="">-- Select an Event --</option>
+                    {% for event_type in event_types %}
+                        <option value="{{ event_type }}"> {{ event_type }} </option>
                     {% endfor %}
                 </select>
             </div>
@@ -116,7 +130,7 @@
 
     <div class="row mt-4">
         <div class="col-sm-12">
-            <h3 id="chartTitle">Resource Data</h3>
+            <h3 id="chartTitle">Chart</h3>
             <div style="height: 400px; width: 100%;">
                 <canvas id="resourceChart"></canvas>
             </div>
@@ -185,6 +199,7 @@
                     options: {
                         responsive: true,
                         maintainAspectRatio: false,
+                        animation: false,
                         plugins: {
                             legend: {
                                 display: true,
@@ -256,10 +271,11 @@
                     }
                 });
 
-                document.getElementById('chartTitle').textContent = 'Resource Data for ' + data.resource_name;
+                document.getElementById('chartTitle').textContent = 'Chart for ' + data.resource_name;
             }
 
             var resourceTypeElement = document.getElementById('resource_type');
+            var eventTypeElement = document.getElementById('event_type');
             var lowerLimitInput = document.getElementById('lower_limit');
             var upperLimitInput = document.getElementById('upper_limit');
             var maxYValueInput = document.getElementById('max_y_value');
@@ -268,9 +284,10 @@
             function fetchData(lowerLimit, upperLimit, maxYValue) {
                 var endpoint = '{{ selected_endpoint.endpoint }}';
                 var resourceType = resourceTypeElement ? resourceTypeElement.value : '';
+                var eventType = eventTypeElement ? eventTypeElement.value : '';
 
                 if (endpoint && resourceType) {
-                    fetch(`?endpoint=${endpoint}&resource_type=${resourceType}`, {
+                        fetch(`?endpoint=${endpoint}&resource_type=${resourceType}&event_type=${eventType}`, {
                         headers: {
                             'X-Requested-With': 'XMLHttpRequest'
                         }
@@ -305,13 +322,13 @@
                 var upperLimit = parseFloat(upperLimitInput.value) || 100;
                 var maxYValue = parseFloat(maxYValueInput.value) || null;
                 fetchData(lowerLimit, upperLimit, maxYValue);
-            }, 5000); // 5 seconds interval
+            }, 1000); // 1 second interval
 
             {% if graph_data %}
             updateChart({
                 values: {{ graph_data.values | safe }},
             resource_name: '{{ selected_resource_type.name }}'
-            }, {{ percentile_25 }}, {{ percentile_75 }}, null);
+            }, null);
         {% endif %}
         });
 
