Fix all the issues with the download button
Signed-off-by: Akarshan Kapoor <data.akarshan@icloud.com>

--- a/server/django/sensordata/templates/device_dashboard.html
+++ b/server/django/sensordata/templates/device_dashboard.html
@@ -343,7 +343,8 @@
                     var url = `/download_csv/?endpoint=${endpoint}`;
                     if (resourceType) {
                         url += `&resource_type=${resourceType}`;
-                    } else if (eventType) {
+                    }
+                    if (eventType) {
                         url += `&event_type=${eventType}`;
                     }
 
