--- a/server/django/sensordata/templates/device_dashboard.html
+++ b/server/django/sensordata/templates/device_dashboard.html
@@ -78,9 +78,9 @@
     </div>
 
     <div class="row justify-content-center mb-4">
-        <div class="col-md-10">
+        <div class="col-md-12">
             <h3 id="chartTitle" class="text-center">Chart</h3>
-            <div style="height: 500px;">
+            <div style="height: 500px;width: 100%;">
                 <canvas id="resourceChart"></canvas>
             </div>
         </div>
